Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,19 +28,24 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>aulosplayer</h2>
+          <h1>aulosplayer</h1>
 
-<p>aulosplayer is a web application powered by flask, that provides a status and control frontend to manage multiple MPD servers.</p>
+<p><strong>ATTENTION: aulosplayer is still ALPHA software!</strong></p>
 
-<p><strong>aulosplayer is ALPHA software!</strong></p>
+<p>aulosplayer is a web application powered by flask, that provides a status and
+control frontend to manage multiple MPD servers.</p>
 
-<h3>Dependencies (Debian-Packages):</h3>
+<p>The primary focus of aulosplayer is to be installed on a server running
+multiple mpd instances that serve different rooms but share their library
+and some predefined playlists.</p>
+
+<h2>Dependencies (Debian-Packages):</h2>
 
 <ul>
 <li>python2.7</li>
 <li>python-flask</li>
 <li>python-mpd</li>
-</ul><h3>Quickstart:</h3>
+</ul><h2>Quickstart:</h2>
 
 <ul>
 <li>Edit config/players.json</li>
