--- a/index.html
+++ b/index.html
@@ -39,13 +39,24 @@ control frontend to manage multiple MPD servers.</p>
 multiple mpd instances that serve different rooms but share their library
 and some predefined playlists.</p>
 
+<h2>Screenshots:</h2>
+
+<dl>
+<dt>Overview:</dt>
+<dd><img src="pics/aulosplayer_overview.png" alt="Screenshot Overview"/></dd>
+<dt>Player Status:</dt>
+<dd><img src="pics/aulosplayer_player.png" alt="Screenshot Player Status"/></dd>
+</dl>
+
 <h2>Dependencies (Debian-Packages):</h2>
 
 <ul>
 <li>python2.7</li>
 <li>python-flask</li>
 <li>python-mpd</li>
-</ul><h2>Quickstart:</h2>
+</ul>
+
+<h2>Quickstart:</h2>
 
 <ul>
 <li>Edit config/players.json</li>
